--- a/submission.html
+++ b/submission.html
@@ -84,7 +84,7 @@ input, textarea {
 					<div class="owl-twitter owl-carousel">
 						<div class="item text-left">
 
-							<div><h4 class="white heading small-heading no-margin regular"><span style="margin-left:6px;">PART I: Victim Information</span></h4><br />
+							<div><h4 class="white heading small-heading no-margin regular"><span style="margin-left:6px;">PART I: Information Regarding the Victom</span></h4><br />
 						
 						<div class="bigbox">
 							<p>Full Name:<br />
