--- a/submission.html
+++ b/submission.html
@@ -44,7 +44,7 @@ body p, .bigbox {
 }
 input, textarea {
 	margin-top:5px;
-}
+}v
 </style>
 
 </head>
@@ -84,7 +84,7 @@ input, textarea {
 					<div class="owl-twitter owl-carousel">
 						<div class="item text-left">
 
-							<div><h4 class="white heading small-heading no-margin regular"><span style="margin-left:6px;">PART I: Information Regarding the Victom</span></h4><br />
+							<div><h4 class="white heading small-heading no-margin regular"><span style="margin-left:6px;">PART I: Information Regarding the Victim</span></h4><br />
 						
 						<div class="bigbox">
 							<p>Full Name:<br />
